--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,8 @@ dependencies {
     // 开源webview
     implementation 'com.just.agentweb:agentweb:4.1.3' // (必选)
 
+    implementation 'com.jaeger.statusbarutil:library:1.5.1'
+
 //    implementation 'com.github.bumptech.glide:glide:4.1.0'
 
     // test ff
