--- a/mymgstudyapp/build.gradle
+++ b/mymgstudyapp/build.gradle
@@ -4,13 +4,13 @@ plugins {
 def configInfo = rootProject.ext.android
 
 android {
-    compileSdkVersion configInfo.compileSdkVersion
-    buildToolsVersion configInfo.buildToolsVersion
+    compileSdkVersion 29
+    buildToolsVersion "29.0.3"
 
     defaultConfig {
         applicationId "com.example.mymgstudyapp"
-        minSdkVersion configInfo.minSdkVersion
-        targetSdkVersion configInfo.targetSdkVersion
+        minSdkVersion 16
+        targetSdkVersion 26
         versionCode configInfo.versionCode
         versionName configInfo.versionName
 
@@ -33,6 +33,8 @@ dependencies {
 
 //    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 //    implementation files('libs/jmdns.jar')
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
