--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,8 @@ dependencies {
 
     implementation 'com.jaeger.statusbarutil:library:1.5.1'
 
+    implementation "org.java-websocket:Java-WebSocket:1.5.1"
+
 //    implementation 'com.github.bumptech.glide:glide:4.1.0'
 
     // test ff
