--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".websocket.WebSocketServerActivity"></activity>
         <activity
             android:name=".uidemo.photoview.demo.PhotoViewTestActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode"
@@ -167,8 +168,8 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:launchMode="singleTask"
-            android:exported="true" />
+            android:exported="true"
+            android:launchMode="singleTask" />
         <activity
             android:name=".butterknife.ButterKnifeTestActivity"
             android:exported="false" />
