完善 websocket 客户端实现， 可以正常连接服务端；

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity android:name=".websocket.WebSocketServerActivity"></activity>
+        <activity android:name=".websocket.client.WebSocketClientActivity"></activity>
         <activity
             android:name=".uidemo.photoview.demo.PhotoViewTestActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize|uiMode"
