--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,10 @@ dependencies {
     implementation "com.android.support:recyclerview-v7:28.0.0"
 
     implementation 'com.jakewharton:butterknife:8.8.1'
+
     testImplementation 'junit:junit:4.12'
+    testImplementation "org.robolectric:robolectric:3.3.2"
+
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     // okhttp
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
