--- a/rtsp-server/build.gradle
+++ b/rtsp-server/build.gradle
@@ -3,8 +3,8 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
-    buildToolsVersion "33.0.2"
+    compileSdkVersion 29
+    buildToolsVersion '29.0.3'
 
     defaultConfig {
         applicationId "com.example.rtsp.server"
