--- a/rtsp-server/src/main/AndroidManifest.xml
+++ b/rtsp-server/src/main/AndroidManifest.xml
@@ -18,11 +18,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyAndroidStudy">
-        <activity android:name=".RtspServerActivity"></activity>
+        <activity android:name=".CaptureActivity"></activity>
+        <activity android:name=".RtspServerActivity" />
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
