--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,8 @@ dependencies {
 
     implementation "org.java-websocket:Java-WebSocket:1.5.1"
 
+    implementation project(':libyuv')
+
 //    implementation 'com.github.bumptech.glide:glide:4.1.0'
 
     // test ff
