--- a/rtsp-client/build.gradle
+++ b/rtsp-client/build.gradle
@@ -35,4 +35,8 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation("com.mgtv.tvos.link:mgtv-tvos-link-sdk:dev4test-1.1-SNAPSHOT") {
+        changing = true
+    }
 }
