--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,8 @@ dependencies {
 
     implementation project(':libyuv')
 
+//    implementation 'com.github.nguyenhoanglam:ImagePicker:1.4.1'
+
 //    implementation 'com.github.bumptech.glide:glide:4.1.0'
 
     // test ff
