--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,8 @@ dependencies {
 
     implementation project(':libyuv')
 
+    implementation 'com.yanzhenjie:album:2.1.3'
+
 //    implementation 'com.github.nguyenhoanglam:ImagePicker:1.4.1'
 
 //    implementation 'com.github.bumptech.glide:glide:4.1.0'
