--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".uidemo.selfdefineview.SelfDefineViewTestActivity"></activity>
         <activity
             android:name=".game.dadishu.DaDiShuActivity"
             android:screenOrientation="landscape" />
