--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,7 +85,11 @@ dependencies {
 
 //    implementation 'com.github.nguyenhoanglam:ImagePicker:1.4.1'
 
-//    implementation 'com.github.bumptech.glide:glide:4.1.0'
+    // glide
+    implementation ("com.github.bumptech.glide:glide:4.6.1") {
+        exclude group: "com.android.support"
+    }
+    implementation 'com.github.bumptech.glide:annotations:4.6.1'
 
     // test ff
     // test ee e e
