file picker 独立出一个库，demo测试

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,7 @@ dependencies {
     implementation "org.java-websocket:Java-WebSocket:1.5.1"
 
     implementation project(':libyuv')
+    implementation project(':mx-filepicker')
 
     implementation 'com.yanzhenjie:album:2.1.3'
 
