--- a/mx-filepicker/build.gradle
+++ b/mx-filepicker/build.gradle
@@ -34,4 +34,12 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation "com.android.support:recyclerview-v7:28.0.0"
+
+    // glide
+    implementation ("com.github.bumptech.glide:glide:4.6.1") {
+        exclude group: "com.android.support"
+    }
+    implementation 'com.github.bumptech.glide:annotations:4.6.1'
 }
