--- a/mx-filepicker/src/main/AndroidManifest.xml
+++ b/mx-filepicker/src/main/AndroidManifest.xml
@@ -2,4 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mx.filepicker">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <application>
+        <activity android:name=".VideoPickerActivity"></activity>
+    </application>
 </manifest>
