方案2： 创建一个模块 用来实现gradle 插件

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: MyBuildScrPlugin
+apply plugin: 'com.example.gradle.plugin'
 
 def configInfo = rootProject.ext.android
 
