--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,9 +40,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity
-            android:name=".androidapi.CustomStatusBarActivity"
-            />
+        <activity android:name=".socket.SocketServerActivity"></activity>
+        <activity android:name=".socket.SocketClientActivity" />
+        <activity android:name=".androidapi.CustomStatusBarActivity" />
         <activity android:name=".filepicker.VideoPickerActivity" />
         <activity android:name=".androidapi.SoundPoolTestActivity" />
         <activity android:name=".uidemo.selfdefineview.SelfDefineViewTestActivity" />
